--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -85,30 +85,28 @@
                                 <div class="box">
                                     <div class="box-title">
                                         <h3>Address Book</h3>
-                                        <a href="javascript:void(0)" (click)="NewBillingAddress(templateBillingAddress)">Add New Addresses</a>
+                                        <a href="javascript:void(0)" (click)="NewBillingAddress(templateBillingAddress)"><i class="fa fa-plus"></i> &nbsp; Add New Addresses</a>
                                     </div>
-                                    <div class="row">
-                                        <div class="col-sm-6" *ngFor="let lstBilling of lstBillingAddress">
-                                            <!-- <h6>Default Billing Address</h6> -->
-                                            <address>
-                                               <b>Name : </b> {{lstBilling.fName}} {{lstBilling.lName}}
-                                               <br>
-                                               <b>Company Name : </b> {{lstBilling.companyName}}
-                                                <br>
-                                                <b>Address : </b> {{lstBilling.address}}, {{lstBilling.city}}
-                                                <br>
-                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                                                {{lstBilling.state}}, {{lstBilling.zipCode}}, {{lstBilling.country}}
-                                                <br>
-                                                <b>EmailId : </b> {{lstBilling.emailId}}
-                                                <br>
-                                                <b>Mobile No :</b> {{lstBilling.phone}}
-                                                <br>
-                                                <a href="javascript:void(0)" (click)="EditBillingAddress(templateBillingAddress,lstBilling)">Edit Address</a>
-                                                <a href="javascript:void(0)" style="float: right;" (click)="DeleteBillingAddress(templateDeleteBillingAddress,lstBilling)">Remove Address</a>
-                                            </address>
-                                            <hr>
-                                        </div>
+                                    <div *ngFor="let lstBilling of lstBillingAddress">
+                                        <!-- <h6>Default Billing Address</h6> -->
+                                        <address>
+                                            <div class="row">
+                                                <div class="col-md-11">
+
+                                                    <h4><b>{{lstBilling.fName}} {{lstBilling.lName}}</b></h4>
+                                                    <div><b>{{lstBilling.phone}} &nbsp;&nbsp;&nbsp; {{lstBilling.emailId}}</b></div>
+                                                    <div>{{lstBilling.companyName}}</div>
+                                                    <div>
+                                                        {{lstBilling.address}}, {{lstBilling.city}}
+                                                    {{lstBilling.state}}, {{lstBilling.zipCode}}, {{lstBilling.country}}
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-1">
+                                                    <a href="javascript:void(0)" (click)="EditBillingAddress(templateBillingAddress,lstBilling)"><i class="fa fa-pencil"></i></a>
+                                                    <a href="javascript:void(0)" style="float: right;" (click)="DeleteBillingAddress(templateDeleteBillingAddress,lstBilling)"><i class="fa fa-trash-o"></i></a>
+                                                </div>
+                                            </div>
+                                        </address>
                                     </div>
                                 </div>
                             </div>
