--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -7,149 +7,119 @@
             <h3><strong>Your Cart is Empty</strong></h3>
             <h4>Add something to make me happy :)</h4>
         </div>
-        <div class="row" *ngIf="productSizeColor.length" style="overflow-y: scroll;">
-            <div class="col-sm-12">
-                <table class="table cart-table table-responsive-xs">
-                    <thead>
-                        <tr class="table-head">
-                            <th scope="col">image</th>
-                            <th scope="col">product name</th>
-
-                            <th scope="col">No of Set/Pcs</th>
-
-                            <th scope="col">Qty</th>
-                            <th scope="col">Rate</th>
-                            <th scope="col">Amount</th>
-                            <th scope="col">Discount(%)</th>
-
-                            <th scope="col">total</th>
-                            <th scope="col">Delete</th>
-                        </tr>
-                    </thead>
-                    <tbody *ngFor="let product of productSizeColor">
-                        <tr>
-                            <td>
-                                <a (click)="GoToDetail(product.rowID,product?.productSizeId,product?.setType,product?.setNo);">
-                                    <img *ngIf="product?.setNo>0" [src]="ProductImage+product?.productId+'/productSetImage/'+product?.setNo+'/'+product?.productImg[0]">
-                                    <img *ngIf="product?.setNo==0" [src]="ProductImage+product?.productId+'/productColorImage/'+product?.productSizeColorId+'/'+product?.productImg[0]">
-                                </a>
-                            </td>
-                            <td>
-                                <a>
-                                    <div [innerHTML]="product?.productName"></div>
-                                    <!-- {{ product?.productName| titlecase }}-->
-                                </a>
-                                <div class="mobile-cart-content row">
-                                    <div class="col-xs-3">
+        <div *ngIf="productSizeColor.length">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="pb-4" *ngFor="let product of productSizeColor">
+                        <div class="cart-product-details">
+                            <div class="row">
+                                <div class="col-sm-2 text-center">
+                                    <a
+                                        (click)="GoToDetail(product.rowID,product?.productSizeId,product?.setType,product?.setNo);">
+                                        <img class="img-fluid" *ngIf="product?.setNo>0"
+                                            [src]="ProductImage+product?.productId+'/productSetImage/'+product?.setNo+'/'+product?.productImg[0]">
+                                        <img class="img-fluid" *ngIf="product?.setNo==0"
+                                            [src]="ProductImage+product?.productId+'/productColorImage/'+product?.productSizeColorId+'/'+product?.productImg[0]">
+                                    </a>
+                                </div>
+                                <div class="col-sm-10">
+                                    <div class="d-flex justify-content-between mobile-column">
+                                        <h5 [innerHTML]="product?.productName"></h5>
+                                        <!-- {{ product?.productName| titlecase }}-->
                                         <div class="qty-box">
                                             <div class="input-group">
-                                                <input type="text" name="quantity" class="form-control input-number" disabled [(ngModel)]="product.quantity">
+                                                <span class="input-group-prepend">
+                                                    <button type="button" class="btn quantity-left-minus"
+                                                        data-type="minus" (click)="decrement(product)">
+                                                        <i class="ti-minus"></i>
+                                                    </button>
+                                                </span>
+                                                <input type="text" name="quantity" class="form-control input-number"
+                                                    disabled [(ngModel)]="product.quantity">
+                                                <span class="input-group-prepend">
+                                                    <button type="button" class="btn quantity-right-plus"
+                                                        data-type="plus" (click)="increment(product)">
+                                                        <i class="ti-plus"></i>
+                                                    </button>
+                                                </span>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xs-3">
-                                        <h2 class="td-color">
+                                    <div class="product-details">
+                                        <div><span>Size: </span><span>M</span></div>
+                                        <div><span>Color: </span><span>Red</span></div>
+                                    </div>
+
+                                    <div class="d-flex justify-content-start final-rate-offer">
+                                        <h4 class="text-black">
+                                            {{ (product.salePrice) | currency:productService?.Currency.currency:'symbol' }}
+                                        </h4>
+                                        <del>{{ product.price | currency:productService?.Currency.currency:'symbol' }}</del>
+                                        <h5 class="text-red">
+                                            {{ product.perDiscount/product.totalPieces | number:'1.2-2' }}%</h5>
+                                    </div>
+
+                                    <div class="d-flex justify-content-between mt-3">
+                                        <a href="javascript:void(0)" (click)="removeItem(product)" class="icon">
+                                            <i class="ti-trash text-red" style="font-size:1.5rem;"></i>
+                                        </a>
+                                        <h3>
                                             {{ product.salePrice | currency:productService?.Currency.currency:'symbol' }}
-                                        </h2>
+                                        </h3>
                                     </div>
-                                    <div class="col-xs-3">
-                                        <h2 class="td-color">
-                                            <a (click)="removeItem(product)" class="icon">
-                                                <i class="ti-close"></i>
-                                            </a>
-                                        </h2>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="qty-box">
-                                    <div class="input-group">
-                                        <span class="input-group-prepend">
-                                            <button type="button" class="btn quantity-left-minus" data-type="minus"
-                                                (click)="decrement(product)">
-                                                <i class="ti-angle-left"></i>
-                                            </button>
-                                        </span>
-                                        <input type="text" name="quantity" class="form-control input-number" disabled [(ngModel)]="product.quantity">
-                                        <span class="input-group-prepend">
-                                            <button type="button" class="btn quantity-right-plus" data-type="plus"
-                                                (click)="increment(product)">
-                                                <i class="ti-angle-right"></i>
-                                            </button>
-                                        </span>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <h2>
-                                    {{ product.totalPieces}}
-                                </h2>
-                            </td>
-                            <td>
-                                <h2>
-                                    {{ product.price/product.totalPieces | currency:productService?.Currency.currency:'symbol' }}
-                                </h2>
-                            </td>
-                            <td>
-                                <h2>
-                                    {{ product.price | currency:productService?.Currency.currency:'symbol' }}
-                                </h2>
-                            </td>
+                                    <!-- <div class="qty-box">
+                                        <div class="input-group">
+                                            <input type="text" name="quantity" class="form-control input-number" disabled [(ngModel)]="product.quantity">
+                                        </div>
+                                    </div> -->
 
-                            <td>
-                                <h2>
+                                    <!-- <a (click)="removeItem(product)" class="icon">
+                                        <i class="ti-close"></i>
+                                    </a> -->
                                     <!-- {{ product.discount | currency:productService?.Currency.currency:'symbol' }}  -->
-                                    {{ product.perDiscount/product.totalPieces | number:'1.2-2' }}%
-                                </h2>
-                            </td>
+                                    <!-- <p>{{ product.totalPieces}}</p> -->
 
+                                    <!-- <p>{{ product.price/product.totalPieces | currency:productService?.Currency.currency:'symbol' }}</p> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-center pb-4" *ngIf='productSizeColor.length'>
+                        <a [routerLink]="['/shop/collection/left/sidebar']" class="btn btn-solid">continue shopping</a>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="p-4" style="border: 1px solid #dddddd;">
+                        <h4 class="mb-4">Price Details</h4>
+                        <p class="d-flex justify-content-between">
+                            <span>Total Pieces: </span>
+                            <span><b>{{TotalPieces}}</b></span>
+                        </p>
+                        <p class="d-flex justify-content-between">
+                            <span>Total Price: </span>
+                            <span><b>{{ Price | currency:productService?.Currency.currency:'symbol'}}</b></span>
+                        </p>
+                        <p class="d-flex justify-content-between">
+                            <span>Total Discounts: </span>
+                            <span><b>{{ Discount | currency:productService?.Currency.currency:'symbol'}}</b></span>
+                        </p>
+                        <hr>
+                        <p class="d-flex justify-content-between">
+                            <span>Total Ammount: </span>
+                            <span><b>{{ TotalAmount | currency:productService?.Currency.currency:'symbol'}}</b></span>
+                        </p>
+                        <hr>
+                        <p class="text-green mb-4">You will save
+                            {{ Discount | currency:productService?.Currency.currency:'symbol'}} on this order</p>
+                        <div class="text-center">
+                            <a class="btn btn-solid" style="color:#fff;" (click)="ProceedToCheckout()">check out</a>
+                        </div>
 
-                            <td>
-                                <h2 class="td-color">
-                                    {{ (product.salePrice) | currency:productService?.Currency.currency:'symbol' }}
-                                </h2>
-                            </td>
-                            <td>
-                                <a href="javascript:void(0)" (click)="removeItem(product)" class="icon">
-                                    <i class="ti-close"></i>
-                                </a>
-                            </td>
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td>
-                                <b>Total</b>
-                            </td>
-                            <td>
-                                <h2> {{TotalPieces}}</h2>
-                            </td>
-                            <td></td>
-                            <td>
-                                <h2> {{ Price | currency:productService?.Currency.currency:'symbol'}}</h2>
-                            </td>
-                            <td>
-                                <h2> {{ Discount | currency:productService?.Currency.currency:'symbol'}}</h2>
-                            </td>
-                            <td>
-                                <h2> {{ TotalAmount | currency:productService?.Currency.currency:'symbol'}}</h2>
-                            </td>
-                            <td></td>
-                        </tr>
-                    </tfoot>
-                </table>
+                    </div>
 
+                </div>
             </div>
-        </div>
-        <div class="row cart-buttons" *ngIf='productSizeColor.length'>
-            <div class="col-6">
-                <a [routerLink]="['/shop/collection/left/sidebar']" class="btn btn-solid">continue shopping</a>
-            </div>
-            <div class="col-6">
-                <a class="btn btn-solid" (click)="ProceedToCheckout()">check out</a>
-            </div>
+
         </div>
     </div>
 </section>
