--- a/src/assets/scss/theme/_style.scss
+++ b/src/assets/scss/theme/_style.scss
@@ -548,9 +548,9 @@ button {
         background-image: linear-gradient(30deg, $dark-font 50%, transparent 50%);
         border: 2px solid $dark-font;
     }
-    &:focus {
-        color: $white;
-    }
+    // &:focus {
+    //     color: $white;
+    // }
     &.btn-gradient {
         background: var(--theme-deafult);
         background: linear-gradient(180deg, var(--theme-gradient1) 0%, var(--theme-gradient2) 99%);
@@ -14221,7 +14221,7 @@ div#loading-bar {
 //     border: 1px solid #dbdbdb; 
 // } 
 
-// New changes by .............................
+// New changes by Subhash.............................
 
 .top-header .header-contact {
     padding: 10px 0;
@@ -14281,7 +14281,7 @@ header a {
 .btn-solid-small {
     padding: 5px 10px;
     font-weight: normal;
-    border: 1px solid var(--theme-deafult);
+    border-width: 1px;
 }
 .top-header {
     .header-dropdown {
@@ -14360,9 +14360,9 @@ section, .section-t-space {
     .product-pagination .pagination .page-item a {
         padding: 14px 20px;
     }
-    .top-header .header-dropdown li:hover {
-        color: var(--theme-deafult);
-    }
+    // .top-header .header-dropdown li:hover {
+    //     color: var(--theme-deafult);
+    // }
     .onhover-dropdown:before {
         right: -15px;
     }
@@ -14373,10 +14373,95 @@ section, .section-t-space {
     }
 }
 
-.collection-product-wrapper .product-top-filter .product-filter-content .product-page-filter {
-    margin-right: 0;
-    margin-left: auto;
+.collection-product-wrapper {
+    .product-top-filter {
+        .product-filter-content {
+            .product-page-filter {
+                margin-right: 0;
+                margin-left: auto;
+            }
+        }
+    }
 }
-.breadcrumb-section .breadcrumb {
-    justify-content: flex-start;
+.breadcrumb-section {
+    .breadcrumb {
+        justify-content: flex-start;
+    }
+}
+.product-right {
+    .product-buttons {
+        text-align: center;
+    }
+}
+.checkout-form {
+    h3 {
+        color: #000;
+    } & address {
+        p  {
+           color: #000; 
+        }
+    }
+}
+.onhover-div {
+    .show-div {
+        top: 50px;
+        box-shadow: 4px 4px 10px rgba(0,0,0,.2);
+    }
+}
+.dashboard .box .box-title > a {
+    color: #007bff;
+}
+.dashboard .box address {
+    padding: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #ececec;
+    transition: .3s all ease-in-out;
+
+}
+.dashboard .box address:hover {
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+}
+.cart-product-details {
+    border-bottom: 1px solid #ddd;
+}
+.text-black {
+    color: #000;
+}
+.text-red {
+    color: red;
+}
+.box-shadow {
+    box-shadow: 0px 0px 10px rgba(0,0,0,.2);
+}
+.text-green {
+    color:#388e3c;
+}
+.qty-box .form-control {
+    height: 30px;
+}
+.cart-product-details img {
+    max-height: 150px;
+}
+@media (max-width: 767px){
+    .mobile-column {
+        flex-direction: column;
+        margin-top: 15px;
+        text-align: center;
+    }
+    .product-details {
+        text-align: center;
+        margin-top: 15px;
+    }
+    .final-rate-offer {
+        justify-content: center !important;
+        margin-top: 15px;
+    }
+}
+.qty-box .input-group .form-control {
+    width: 40px;
+}
+a.btn-solid-small:not([href]):hover, a.btn-solid-small:not([href]):focus {
+    background-position: 100%;
+    color: #000000;
+    background-color: #ffffff;
 }
