--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -14,8 +14,7 @@
                         <div class="cart-product-details">
                             <div class="row">
                                 <div class="col-sm-2 text-center">
-                                    <a
-                                        (click)="GoToDetail(product.rowID,product?.productSizeId,product?.setType,product?.setNo);">
+                                    <a (click)="GoToDetail(product.rowID,product?.productSizeId,product?.setType,product?.setNo);">
                                         <img class="img-fluid" *ngIf="product?.setNo>0"
                                             [src]="ProductImage+product?.productId+'/productSetImage/'+product?.setNo+'/'+product?.productImg[0]">
                                         <img class="img-fluid" *ngIf="product?.setNo==0"
@@ -24,7 +23,9 @@
                                 </div>
                                 <div class="col-sm-10">
                                     <div class="d-flex justify-content-between mobile-column">
-                                        <h5 [innerHTML]="product?.productName"></h5>
+                                        <h5 [innerHTML]="(product?.productName).split('|')[0]"></h5>
+                                        <!-- <br/>
+                                        <h5 [innerHTML]="(product?.productName)"></h5> -->
                                         <!-- {{ product?.productName| titlecase }}-->
                                         <div class="qty-box">
                                             <div class="input-group">
@@ -34,8 +35,7 @@
                                                         <i class="ti-minus"></i>
                                                     </button>
                                                 </span>
-                                                <input type="text" name="quantity" class="form-control input-number"
-                                                    disabled [(ngModel)]="product.quantity">
+                                                <input type="text" name="quantity" class="form-control input-number" disabled [(ngModel)]="product.quantity">
                                                 <span class="input-group-prepend">
                                                     <button type="button" class="btn quantity-right-plus"
                                                         data-type="plus" (click)="increment(product)">
@@ -46,15 +46,22 @@
                                         </div>
                                     </div>
                                     <div class="product-details">
-                                        <div><span>Size: </span><span>M</span></div>
-                                        <div><span>Color: </span><span>Red</span></div>
+                                        <div *ngIf="product?.setType==2">
+                                            <span *ngFor="let lst of ColorSize(product?.productName); let i =index;">
+                                                <p *ngIf="i>0">
+                                                {{lst}}
+                                            </p>
+                                                </span>
+                                        </div>
+                                        <div *ngIf="product?.setType==1"><span>Size: </span><span>{{(product?.productName).split('|')[2]}}</span></div>
+                                        <div *ngIf="product?.setType==1"><span>Color: </span><span>{{(product?.productName).split('|')[1]}}</span></div>
                                     </div>
 
                                     <div class="d-flex justify-content-start final-rate-offer">
                                         <h4 class="text-black">
                                             {{ (product.salePrice) | currency:productService?.Currency.currency:'symbol' }}
-                                        </h4>
-                                        <del>{{ product.price | currency:productService?.Currency.currency:'symbol' }}</del>
+                                        </h4>&nbsp;
+                                        <del>{{ product.price | currency:productService?.Currency.currency:'symbol' }}</del> &nbsp;
                                         <h5 class="text-red">
                                             {{ product.perDiscount/product.totalPieces | number:'1.2-2' }}%</h5>
                                     </div>
@@ -109,8 +116,7 @@
                             <span><b>{{ TotalAmount | currency:productService?.Currency.currency:'symbol'}}</b></span>
                         </p>
                         <hr>
-                        <p class="text-green mb-4">You will save
-                            {{ Discount | currency:productService?.Currency.currency:'symbol'}} on this order</p>
+                        <p class="text-green mb-4">You will save {{ Discount | currency:productService?.Currency.currency:'symbol'}} on this order</p>
                         <div class="text-center">
                             <a class="btn btn-solid" style="color:#fff;" (click)="ProceedToCheckout()">check out</a>
                         </div>
